# archlogger

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  archlogger.cpp  logtype.cpp  logtype.hpp  logtype_timefolder.cpp  logtype_timefolder.hpp
src/csv/: csv_worker.cpp  csv_worker.hpp
src/helper/: log_helper.cpp  log_helper.hpp  log_limits.h
src/ini/: log_ini.cpp  log_ini.hpp  settings.hpp
src/swa/: swa_parser.cpp  swa_parser.hpp
src/syslog/: log_syslog.cpp  log_syslog.hpp
src/test/: main.cpp
